--- a/front-end/YouTune/src/index.html
+++ b/front-end/YouTune/src/index.html
@@ -6,6 +6,11 @@
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Titillium+Web:200,300,400,400i,600,600i,700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
